--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </nav>
 
     <div id="filters"></div>
+    <div id="comparator"></div>
     <div id="movies"></div>
 
     <!-- ON CHARGE UNIQUEMENT LE ROUTER -->
